fix cart icon issue on mobile and desktop view

--- a/assets/styles/components/atoms/SfBadge.scss
+++ b/assets/styles/components/atoms/SfBadge.scss
@@ -36,7 +36,7 @@
     align-items: center;
     justify-content: center;
     font-size: var(--font-size--xs);
-    top: calc(var(--spacer-xs) * -1.25);
+    top: calc(var(--spacer-xs) * -1.0625);
 
     --badge-padding: calc(var(--spacer-2xs) * 3);
   }
